UI and routing done

--- a/public/assets/scss/_profile.scss
+++ b/public/assets/scss/_profile.scss
@@ -35,7 +35,7 @@
                 margin-bottom: 0;
                 & a{
                     font-weight: 500;
-                    color: #bc8246;
+                    color: #212357;
                 }
             }
         }
@@ -50,7 +50,7 @@
                     text-transform: capitalize;
                     font-weight: 500;
                     &:hover{
-                        color: #bc8246;
+                        color: #212357;
                     }
                 }
             }
@@ -60,7 +60,7 @@
                     font-size: 18px;
                     color: #000;
                     &:hover{
-                        color: #bc8246;
+                        color: #212357;
                     }
                     
                 }
@@ -75,7 +75,7 @@
                 height: 17px;
                 text-align: center;
                 line-height: 17px;
-                background-color: #bc8246;
+                background-color: #212357;
                 color: #fff;
                 font-weight: 500;
                 @include border-radius(50%);
@@ -91,7 +91,7 @@
         &-title{
             font-size: 14px;
             font-weight: 600;
-            color: #bc8246;
+            color: #212357;
             border-bottom: 1px solid #eceaea;
             margin-bottom: 0;
             padding-bottom: 20px;
@@ -126,7 +126,7 @@
                     }
                     &.active,
                     &:hover{
-                        color: #bc8246;
+                        color: #212357;
                     }
                     & i{
                         margin-right: 10px;
@@ -158,7 +158,7 @@
                 margin-right: 5px;
             }
             &:hover{
-                color: #bc8246;
+                color: #212357;
             }
         }
         &-title{
@@ -230,7 +230,7 @@
                     font-weight: 500;
                 }
                 &:focus{
-                    border-color: #bc8246;
+                    border-color: #212357;
                     background-color: #fff;
                 }
             }
@@ -250,8 +250,8 @@
 
                 &:hover{
                     color: #fff;
-                    background-color: #bc8246;
-                    border-color: #bc8246;
+                    background-color: #212357;
+                    border-color: #212357;
                 }
             }
         }
@@ -278,7 +278,7 @@
                 margin-right: 5px;
             }
             &:hover{
-                color: #bc8246;
+                color: #212357;
             }
         }
         &-title{
@@ -363,7 +363,7 @@
         }
     }
     &__id{
-        color: #bc8246;
+        color: #212357;
         font-weight: 500;
 
     }
@@ -373,13 +373,13 @@
             color: #000;
 
             &:hover{
-                color: #bc8246;
+                color: #212357;
             }
         }
     }
     &__title{
         &:hover{
-            color: #bc8246;
+            color: #212357;
         }
     }
 }
@@ -403,7 +403,7 @@
                 margin-right: 5px;
             }
             &:hover{
-                color: #bc8246;
+                color: #212357;
             }
         }
         &-title{
@@ -473,7 +473,7 @@
                 font-weight: 500;
             }
             &:focus{
-                border-color: #bc8246;
+                border-color: #212357;
                 background-color: #fff;
             }
         }
