--- a/resources/assets/scss/_footer.scss
+++ b/resources/assets/scss/_footer.scss
@@ -6,6 +6,7 @@
     &__bottom{
         border-top: 1px solid $border-2;
         padding: 45px 0;
+        background-color: #000000 !important;
         &.footer__bottom-2{
             border-top: none;
             padding: 0;
