--- a/resources/scss/_footer.scss
+++ b/resources/scss/_footer.scss
@@ -9,6 +9,7 @@
     &__bottom{
         border-top: 1px solid $border-2;
         padding: 45px 0;
+        background: #000000;
         &.footer__bottom-2{
             border-top: none;
             padding: 0;
