--- a/public/assets/scss/_common.scss
+++ b/public/assets/scss/_common.scss
@@ -11,7 +11,7 @@
 }
  body {
 	font-family: $pop;
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: normal;
 	color: $body-text-color;
 	line-height: 24px;
@@ -20,6 +20,7 @@
 .w-img{
 	& img{
 		width: 100%;
+		border-radius: 20px;
 	}
 }
 .m-img{
@@ -127,7 +128,7 @@ li {
 }
 p {
 	font-family: $pop;
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: normal;
 	color: $body-text-color;
 	margin-bottom: 15px;
