--- a/resources/assets/scss/_variables.scss
+++ b/resources/assets/scss/_variables.scss
@@ -5,7 +5,7 @@ $pop: 'Poppins', sans-serif;
 $white: #ffffff;
 
 $black: #201f1f;
-$black-2: #323232;
+$black-2: #212357;
 $black-3: #222222;
 
 $footer-bg: #151616;
@@ -16,7 +16,7 @@ $grey-3: #9d9d9d;
 $grey-4: #6666;
 
 
-$theme-color: #bc8246;
+$theme-color: #212357;
 $theme-2-color: #8a8f6a;
 $body-text-color: #848b8a;
 
