--- a/resources/scss/_header.scss
+++ b/resources/scss/_header.scss
@@ -372,173 +372,225 @@
     background: $white !important;
 }
 
-.main-menu{
-    & ul{
-        & li{
+.main-menu {
+    ul {
+        li {
             display: inline-block;
             margin-right: 40px;
             position: relative;
             text-align: left;
-            @media #{$lg}{
+
+            @media #{$lg} {
                 margin-right: 30px;
             }
-            & a{
+
+            a {
                 display: block;
                 color: $black-soft;
                 font-weight: 500;
-                padding: 27px 0;
-                padding-bottom: 30px;
+                padding: 27px 0 30px;
                 text-transform: capitalize;
             }
-            &.active{
-                & a{
-                    color: $black-2;
+
+            &.active a {
+                color: $black-2;
+            }
+
+            &.has-dropdown > a {
+                position: relative;
+                padding-right: 15px;
+
+                &::after {
+                    content: '\f107';
+                    position: absolute;
+                    right: 0;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    font-family: "Font Awesome 5 Pro";
+                    font-size: 14px;
                 }
             }
-            &.has-dropdown{
-                & > a{
-                    position: relative;
-                    padding-right: 15px;
-                    &::after{
-                        position: absolute;
-                        content: '\f107';
-                        right: 0;
-                        top: 50%;
-                        @include transform(translateY(-50%));
-                        font-family: "Font Awesome 5 Pro";
-                        font-size: 14px;
-                    }
-                }
-            }
-            &:hover{
-                & a{
+
+            &:hover {
+                > a {
                     color: $black-2;
                 }
-                & ul.submenu{
+
+                > ul.submenu {
                     visibility: visible;
                     opacity: 1;
-                    @include transform(scaleY(1));
+                    transform: scaleY(1);
                 }
             }
-            & ul.submenu{
+
+            ul.submenu {
                 position: absolute;
                 top: 100%;
                 left: 0;
                 background-color: $white;
                 min-width: 200px;
                 padding: 15px 0;
-                @include transform(scaleY(0));
-                transform-origin: 0 0;
-                @include box-shadow(0px 15px 30px 0px rgba(0, 3, 143, 0.1));
+                transform: scaleY(0);
+                transform-origin: top;
                 opacity: 0;
                 visibility: hidden;
                 z-index: 11;
-                & li{
+                box-shadow: 0px 15px 30px rgba(0, 3, 143, 0.1);
+
+                li {
                     margin: 0;
                     display: block;
-                    &.active{
-                        & a{
-                            color: $black-2;
-                        }
+
+                    &.active a {
+                        color: $black-2;
                     }
-                    & a{
+
+                    a {
                         padding: 5px 20px;
                         color: $black-soft;
-                        &:hover{
+
+                        &:hover {
                             color: $black-2;
                         }
                     }
                 }
             }
-            &.mega-menu{
+
+            &.mega-menu {
                 position: static;
-                & ul.submenu{
+
+                > ul.submenu {
+                    display: flex;
+                    justify-content: space-between;
+                    gap: 10px;
                     background-repeat: no-repeat;
                     background-size: auto;
                     background-position: center right;
                     background-attachment: scroll;
-                    width: 100%;
-                    padding: 40px 35px;
-                    & li{
-                        float: left;
-                        display: block;
-                        width: 25%;
-                        & a{
-                            color: $black-2;
-                            margin-bottom: 20px;
-                            padding: 0;
-                            &::after{
-                                display: none;
+                    width: 140%;
+                    padding: 30px;
+                    background-color: $white;
+                    box-shadow: 0px 15px 30px rgba(0, 3, 143, 0.1);
+                    transform: scaleY(0);
+                    transform-origin: top;
+                    opacity: 0;
+                    visibility: hidden;
+
+                    // This will be the LEFT side grid (categories)
+                    .mega-menu-left {
+                        flex: 4;
+
+                        .category-grid {
+                            display: grid;
+                            gap: 20px;
+
+                            .category-card {
+                                text-align: center;
+
+                                a {
+                                    display: block;
+                                    text-decoration: none;
+                                    color: inherit;
+                                }
+
+                                .category-image {
+                                    width: 100%;
+                                    max-width: 150px;
+                                    object-fit: cover;
+                                    border-radius: 12px;
+                                    margin: 0 auto 10px;
+                                }
+
+                                .category-title {
+                                    font-size: 14px;
+                                    font-weight: 600;
+                                    color: $black-2;
+                                }
                             }
                         }
-                        & ul{
+                    }
 
-                            & li{
-                                float: none;
-                                width: 100%;
-                                padding-left: 0;
-                                & a{
-                                    font-size: 12px;
+                    // This will be the RIGHT side (links + view all button)
+                    .mega-menu-right {
+                        flex: 1;
+
+                        .link-list {
+                            margin-bottom: 20px;
+
+                            li {
+                                margin-bottom: 0;
+                                a.arrow-link {
+                                    display: flex;
+                                    justify-content: space-between;
+                                    align-items: center;
+                                    text-decoration: none;
                                     color: $black-soft;
-                                    margin-bottom: 0;
-                                    padding-bottom: 12px;
-                                    &:hover{
+                                    font-size:12px;
+
+                                    &:hover {
                                         color: $black-2;
                                     }
-                                }
-                                &:last-child{
-                                    & a{
-                                        padding-bottom: 0;
+
+                                    .arrow {
+                                        font-size: 14px;
                                     }
                                 }
                             }
                         }
-                    }
-                }
-                &.mega-menu-2{
-                    & ul.submenu{
-                        @media #{$lg}{
-                            background: none;
-                        }
-                        & > li{
-                            @media #{$lg}{
-                                width: 33.33%;
+
+                        .view-all-button {
+                            display: inline-block;
+                            background-color: $black-2;
+                            color: #fff;
+                            padding: 10px 20px;
+                            border-radius: 8px;
+                            font-weight: 400;
+                            text-align: center;
+                            margin-left: 15px;
+                            &:hover {
+                                background-color: darken($black-2, 10%);
                             }
                         }
                     }
                 }
-            }
-        }
-    }
-    &-2{
-        & ul{
-            & li{
-                margin: 0 20px;
-                @media #{$lg}{
-                    margin: 0 15px;
+
+                // Show mega menu on hover
+                &:hover > ul.submenu {
+                    visibility: visible;
+                    opacity: 1;
+                    transform: scaleY(1);
                 }
             }
         }
     }
-    &-3{
-        & ul{
-            & li{
-                &:hover > a{
-                    color: $theme-2-color;
-                }
-                & ul.submenu li:hover a {
-                    color: $theme-2-color;
-                }
-                // & .mega-menu ul.submenu li ul li:hover a {
-                //     color: $theme-2-color;
-                // }
-                & .mega-menu ul.submenu li ul li a:hover {
-                    color: $theme-2-color;
-                }
+
+    &-2 {
+        ul li {
+            margin: 0 20px;
+
+            @media #{$lg} {
+                margin: 0 15px;
+            }
+        }
+    }
+
+    &-3 {
+        ul li {
+            &:hover > a {
+                color: $theme-2-color;
+            }
+
+            ul.submenu li:hover a {
+                color: $theme-2-color;
+            }
+
+            .mega-menu ul.submenu li ul li a:hover {
+                color: $theme-2-color;
             }
         }
     }
 }
+
 
 /* mobile menu*/
 .mobile-menu-btn{
