slider and category banner done

--- a/resources/scss/_common.scss
+++ b/resources/scss/_common.scss
@@ -915,3 +915,31 @@ p {
 
 
 
+.theme-primary-color{
+    color:#0F2D47 !important;
+}
+.theme-color-bg{
+    background-color:#0F2D47 !important;
+}
+.theme-secondary-color{
+    color:#E1732D!important;
+}
+.theme-secondary-color-bg{
+    background-color:#E1732D !important;
+}
+.theme-color-button{
+    background-color:#0F2D47 !important;
+    color:#fff !important;
+    border: 1px solid #0F2D47 !important;
+}
+.theme-color-button:hover{
+    background-color:#E1732D !important;
+    color:#fff !important;
+    border: 1px solid #E1732D !important;
+}
+.theme-font-14{
+    font-size: 14px !important;
+}
+.theme-font-16{
+    font-size: 16px !important;
+}
