--- a/resources/scss/_banner.scss
+++ b/resources/scss/_banner.scss
@@ -25,7 +25,6 @@
             left: -20px;
             width: calc(100% + 40px);
             height: calc(100% + 40px);
-            background: $white;
             @media #{$laptop}{
                 width: calc(100% + 30px);
                 height: calc(100% + 30px);
@@ -57,6 +56,7 @@
     &__item{
         &:hover{
             & .banner__thumb{
+                box-shadow: 0 10px 15px rgba(25, 25, 25, 0.1);
                 & img{
                     @include transform(scale(1.1));
                 }
