--- a/resources/scss/_footer.scss
+++ b/resources/scss/_footer.scss
@@ -8,8 +8,9 @@
 .footer{
     &__bottom{
         border-top: 1px solid $border-2;
-        padding: 45px 0;
-        background: #000000;
+        padding: 25px 0;
+        background: #F9F7F0;
+        color: #000;
         &.footer__bottom-2{
             border-top: none;
             padding: 0;
